proof of concept

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,29 @@
+# CMakeLists.txt
 cmake_minimum_required(VERSION 3.0)
 project(Kraph)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_CXX_COMPILER "/opt/cheerp/bin/clang++")
-set(CMAKE_CXX_FLAGS "-target cheerp-wasm -O2")
-
-# Include directories
-include_directories("src")
-
 file(GLOB SOURCES "src/*.cpp")
-add_executable(app.js ${SOURCES})
+if(TESTS)
+    find_package(GTest REQUIRED)
+    include_directories(${GTEST_INCLUDE_DIRS})
+    file(GLOB TEST_SOURCES "tests/*.cpp")
+    list(REMOVE_ITEM SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/jsexports.cpp")
+    add_executable(tests ${SOURCES} ${TEST_SOURCES})
+    target_link_libraries(tests PRIVATE ${GTEST_LIBRARIES} pthread)
+else()
+    # Configuration for the main app
+    set(CMAKE_CXX_COMPILER "/opt/cheerp/bin/clang++")
+    set(CMAKE_CXX_FLAGS "-target cheerp-wasm -O2")
 
-# Set C++17 features for your target
-target_compile_features(app.js PRIVATE cxx_std_17)
+    # Include directories for the main app
+    include_directories("src")
 
-install(TARGETS app.js DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/..)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/app.wasm DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/..)
+    # Main app target
+    add_executable(app.js ${SOURCES})
+    install(TARGETS app.js DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/..)
+    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/app.wasm DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/..)
+endif()
 
-#cmake . -B build && cmake --build build && cmake --install build && python3 -m http.server
