fix tests and cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 file(GLOB SOURCES "src/*.cpp")
+
 if(TESTS)
     find_package(GTest REQUIRED)
     include_directories(${GTEST_INCLUDE_DIRS})
@@ -13,6 +14,7 @@ if(TESTS)
     list(REMOVE_ITEM SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/jsexports.cpp")
     add_executable(tests ${SOURCES} ${TEST_SOURCES})
     target_link_libraries(tests PRIVATE ${GTEST_LIBRARIES} pthread)
+    target_compile_definitions(tests PRIVATE TESTS=1)
 else()
     # Configuration for the main app
     set(CMAKE_CXX_COMPILER "/opt/cheerp/bin/clang++")
@@ -26,4 +28,7 @@ else()
     install(TARGETS app.js DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/..)
     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/app.wasm DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/..)
 endif()
+
+# cmake -G Ninja . -DTESTS=ON -B build && cmake --build build && ./build/tests
+# cmake -G Ninja . -DTESTS=OFF -B build && cmake --build build && cmake --install build && python3 -m http.server
 
