--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ if(TESTS)
     find_package(GTest REQUIRED)
     include_directories(${GTEST_INCLUDE_DIRS})
     file(GLOB TEST_SOURCES "tests/*.cpp")
-    list(REMOVE_ITEM SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/wasm2js.cpp")
+    list(REMOVE_ITEM SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/bindings.cpp")
     add_executable(tests ${SOURCES} ${TEST_SOURCES})
     target_link_libraries(tests PRIVATE ${GTEST_LIBRARIES} pthread)
     target_compile_definitions(tests PRIVATE TESTS=1)
