--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,16 @@ project(Kraph)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include_directories(external/cpp_utils/include)
+include_directories(external/kjsonparser/include)
+
 file(GLOB SOURCES "src/*.cpp")
+file(GLOB KJSONPARSER_SOURCES "external/kjsonparser/src/*.cpp")
+file(GLOB TEST_SOURCES "tests/*.cpp")
 
 if(TESTS)
     find_package(GTest REQUIRED)
     include_directories(${GTEST_INCLUDE_DIRS})
-    file(GLOB TEST_SOURCES "tests/*.cpp")
     list(REMOVE_ITEM SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/bindings.cpp")
     add_executable(tests ${SOURCES} ${TEST_SOURCES})
     target_link_libraries(tests PRIVATE ${GTEST_LIBRARIES} pthread)
@@ -18,17 +22,14 @@ if(TESTS)
 else()
     # Configuration for the main app
     set(CMAKE_CXX_COMPILER "/opt/cheerp/bin/clang++")
-    set(CMAKE_CXX_FLAGS "-target cheerp-wasm -O2")
-
-    # Include directories for the main app
-    include_directories("src")
+    set(CMAKE_CXX_FLAGS "-target cheerp-wasm -O2 -fexceptions")
 
     # Main app target
-    add_executable(app.js ${SOURCES})
+    add_executable(app.js ${SOURCES} ${KJSONPARSER_SOURCES})
+    # target_link_libraries(app.js PRIVATE kjsonparser)
     install(TARGETS app.js DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/..)
     install(FILES ${CMAKE_CURRENT_BINARY_DIR}/app.wasm DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/..)
 endif()
 
 # cmake -G Ninja . -DTESTS=ON -B build && cmake --build build && ./build/tests
 # cmake -G Ninja . -DTESTS=OFF -B build && cmake --build build && cmake --install build && python3 -m http.server
-
